--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
     "next": "14.2.8",
+    "puppeteer": "^23.3.1",
     "react": "^18",
     "react-dom": "^18"
   },
