--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/postgres": "^0.10.0",
     "next": "14.2.8",
     "ol": "^10.1.0",
+    "proj4": "^2.12.1",
     "puppeteer": "^23.3.1",
     "react": "^18",
     "react-dom": "^18"
