--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
+    "cheerio": "^1.0.0",
     "next": "14.2.8",
     "ol": "^10.1.0",
     "proj4": "^2.12.1",
