--- a/package.json
+++ b/package.json
@@ -11,19 +11,29 @@
   "dependencies": {
     "@vercel/postgres": "^0.10.0",
     "cheerio": "^1.0.0",
+    "cli-progress": "^3.12.0",
+    "leaflet": "^1.9.4",
     "next": "14.2.8",
     "ol": "^10.1.0",
     "proj4": "^2.12.1",
+    "prompt-sync": "^4.2.0",
     "puppeteer": "^23.3.1",
     "react": "^18",
-    "react-dom": "^18"
+    "react-dom": "^18",
+    "react-leaflet": "^4.2.1"
   },
   "devDependencies": {
+    "@types/cli-progress": "^3.11.6",
+    "@types/leaflet": "^1.9.12",
     "@types/node": "^20",
+    "@types/prompt-sync": "^4.2.3",
     "@types/react": "^18",
     "@types/react-dom": "^18",
+    "autoprefixer": "^10.4.20",
     "eslint": "^8",
     "eslint-config-next": "14.2.8",
+    "postcss": "^8.5.1",
+    "tailwindcss": "^3.4.17",
     "typescript": "^5"
   }
 }
