--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "@vercel/postgres": "^0.10.0",
     "cheerio": "^1.0.0",
     "cli-progress": "^3.12.0",
+    "clsx": "^2.1.1",
     "leaflet": "^1.9.4",
     "next": "14.2.8",
     "ol": "^10.1.0",
